--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,8 +7,9 @@
 
     <ImageView
         android:id="@+id/brand_logo"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:padding="10dp"
         android:scaleType="centerCrop"
         android:layout_marginEnd="8dp" />
 
@@ -16,6 +17,8 @@
         android:id="@+id/brand_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:textSize="28dp" />
 
 </LinearLayout>
