--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/brand_logo"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:padding="10dp"
         android:scaleType="centerCrop"
         android:layout_marginEnd="8dp" />
@@ -16,6 +16,7 @@
     <TextView
         android:id="@+id/brand_name"
         android:layout_width="wrap_content"
+        android:layout_marginLeft="50dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textStyle="bold"
