Project final update

--- a/app/src/main/res/drawable/colorgradnint.xml
+++ b/app/src/main/res/drawable/colorgradnint.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#1F5C88"
-        android:centerColor="#1F5C70"
-        android:endColor="#FEFE01"
+        android:startColor="#08CDFC"
+        android:centerColor="#20333F"
+        android:endColor="#EC4901"
     android:angle="45" />
 </shape>
