--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -12,10 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="78dp"
-        android:backgroundTint="#FEFE01"
+        android:background="@drawable/colorgradnint"
         android:text="Go >>"
         android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textSize="24dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
