--- a/app/src/main/res/layout/activity_car_list.xml
+++ b/app/src/main/res/layout/activity_car_list.xml
@@ -12,15 +12,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/welcomeMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:fontFamily="@font/calibri"
-             />
+
 
 
     </LinearLayout>
@@ -28,8 +20,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="748dp"
-        android:layout_below="@id/welcomeMessage"
+        android:layout_height="match_parent"
         android:padding="8dp"
         tools:listitem="@layout/car_card" />
 
