Project final update

--- a/app/src/main/res/layout/activity_car_information_view.xml
+++ b/app/src/main/res/layout/activity_car_information_view.xml
@@ -21,6 +21,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/car_image"
         android:background="@drawable/rounded_background_1"
+
         android:layout_marginTop="-16dp"
         android:clipToPadding="false"
         android:scrollbars="none">
@@ -41,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
+            android:text="BMW M4 competition (2020)"
             android:textColor="#333333"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -53,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
+            android:text="Sport"
             android:textColor="#666666"
             android:textSize="18sp"
             android:paddingStart="16dp"
@@ -64,6 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
+            android:text="$300.0 per day"
             android:textColor="#FF5722"
             android:textSize="18sp"
             android:paddingStart="16dp"
@@ -75,6 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
+            android:text="Testing"
             android:textColor="#333333"
             android:textSize="16sp"
             android:paddingStart="16dp"
