Project final update

--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -110,7 +110,7 @@
         android:layout_marginStart="7dp"
         android:layout_marginTop="23dp"
         android:clickable="true"
-        android:text="Sin in"
+        android:text="@string/sing_in"
         android:textColor="#000000"
         android:textSize="22dp"
         app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -121,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="I already have an account?"
+        android:text="@string/i_already_have_an_account"
         android:textColor="#000000"
         android:textSize="22dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
