--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -121,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Don't have an account?"
+        android:text="@string/don_t_have_an_account"
         android:textColor="#000000"
         android:textSize="20dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
